# ZathuraDbg

./: .gitignore  .gitmodules  ARCHITECTURE.md  CIVIC_SYSTEM_README.md  COMPILE.md  CONTRIBUTING.md  README.md  WASM.md  imgui.ini
.github/: FUNDING.yml
.github/workflows/: appimage.yml  c-cpp.yml  native.yml  wasm.yml  windows.yml
civic_backend/: README.md  ai_processor.py  api_overview.html  auth.py  database.py  index.html  main.py  models.py  requirements.txt  schemas.py  start.sh
installer/windows/: README.md  stage.sh  zathura.iss
packaging/: .gitignore  README.md  build-appimage.sh
src/: .Zathura.zlog  .gdb_history  CMakeLists.txt  CMakePresets.json  Makefile  build-wasm.sh  build.sh  config.zlyt  context.json  context2.json  default.zlyt  imgui.ini  labels.asm  main.cpp  main.json  main.txt  massif.out.8209  mov.asm  pch.hpp  recording.mkv  test.asm  test.asm.bak  test.asm.tmp.out  wasm-default-layout.zlyt  wasm-shell.html
src/app/: app.cpp  app.hpp  buttons.cpp  codeContextMenu.cpp  codeContextMenu.hpp  menuBar.cpp  shortcuts.cpp  shortcuts.hpp
src/app/actions/: actions.cpp  actions.hpp
src/app/arch/: arch.cpp  arch.hpp  arm.cpp  arm.hpp  x86.cpp  x86.hpp
src/app/dialogs/: dialogHeader.hpp  fileDialogs.cpp  safeDialogs.hpp  tinyfd_stub.c
src/app/integration/: debugBackend.cpp  debugBackend.hpp  debugState.cpp  debugState.hpp  elfLoader.cpp  elfLoader.hpp  linuxProcess.cpp  linuxProcess.hpp
src/app/integration/breakpoint/: BreakpointManager.cpp  BreakpointManager.hpp
src/app/integration/gdb/: elfSymbols.cpp  elfSymbols.hpp  gdbPacket.cpp  gdbPacket.hpp  gdbRemote.cpp  gdbRemote.hpp  gdbRemoteStub.cpp
src/app/integration/interpreter/: breakpoints.cpp  errorHandler.cpp  errorHandler.hpp  execution.cpp  interpreter.cpp  interpreter.hpp  registers.cpp  vm.cpp
src/app/integration/keystone/: assembler.cpp  assembler.hpp
src/app/integration/nasm/: nasm.cpp  nasm.hpp
src/app/integration/utils/hex/: hex.hpp  hexdump.hpp
src/app/integration/wasm/: browserFiles.cpp  browserFiles.hpp
src/app/tasks/: editorTasks.cpp  editorTasks.hpp  fileTasks.cpp  fileTasks.hpp
src/app/windows/: consoleWindow.cpp  debugToolWindows.cpp  hexEditorWindow.cpp  memoryMapView.cpp  registerWindow.cpp  sourceWindow.cpp  stackWindow.cpp  windows.hpp
src/asm/: 16bit.asm  32bit.asm  ATnT.asm  aarch64.asm  arm.asm  gas.asm  hello_world_x86.asm  labels.asm  mov.asm  push_pop.asm  square.asm
src/cmake/: BuildParallelism.cmake
src/scripts/wasm/: build-wasm-deps.sh  check-stubs.sh  icicle-cpp-wasm.patch  icicle-emu-commit.txt  icicle-emu-wasm.patch
src/tests/: elfSymbolsTest.cpp
src/tests/asm/: stepIn.asm
src/utils/: filedialog.h  fonts.cpp  fonts.hpp  layoutmanager.cpp  layoutmanager.h  logger.cpp  logger.hpp  runtimePaths.cpp  runtimePaths.hpp  stb_image.h  stringHelper.cpp  stringHelper.hpp  style.h  uiElements.cpp  uiElements.h
